add a way to create admin
