# config/routes.rb
@@ -1,7 +1,6 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
-  # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
   namespace :api do
     namespace :v1 do
       resources :houses 
@@ -10,6 +9,10 @@ Rails.application.routes.draw do
       post "/signup", to: "users#create"
       post "/house/:id/favorite", to: "houses#favorite"
       get "/auto_login", to: "users#auto_login"
+      
+     #This route is only  here to allow you make a user became admin very easy. I'm not planing to put it on a real live project
+     # I put it here just in case you want to test the House endpoint in the live documentation. 
+      get "/user/:id/admin", to: "users#b_admin"
     end
   end
 end
